cmake_minimum_required(VERSION 3.5.1)
project(sage)

include_directories(${PROJECT_SOURCE_DIR})
include_directories(hash-library)
subdirs(hash-library)
#add_executable(test_thread test_thread.cpp)
#add_executable(test_bitmap test_bitmap.cpp)
#add_executable(test_libaio test_libaio.cpp)
#add_executable(test_aio test_aio.cpp)
#add_executable(test_cache_aio test_cache_aio.cpp)
#add_executable(test_edge_sampling test_edge_sampling.cpp)
#add_executable(test_vertex test_vertex.cpp)
add_executable(test_random test_random.cpp)
add_executable(test_hash test_hash.cpp)
target_link_libraries(test_hash hash)
target_link_libraries(test_random hash)
#add_executable(test_boost_program_options test_boost_program_options.cpp)
#add_executable(test_cache test_cache.cpp)
#add_executable(test_memcpy test_memcpy.cpp)
#add_executable(test_write test_write.cpp)
#add_executable(test_lru test_lru.cpp)
#add_executable(test_multi_section_lru test_multi_section_lru.cpp)
#add_executable(test_graph test_graph.cpp)
#add_executable(test_malloc test_malloc.cpp)
#add_executable(test_serialized_value_bitmap test_serialized_value_bitmap.cpp
